@@ -58,13 +58,6 @@ makedeb()
 	/sbin/ldconfig -n $TMPDIR/usr/$__LIB
 
 	if [ ! $SUPPLEMENT = 1 ]; then
-		if [ "$DEBARCH" = "amd64" ]; then
-			ln -fs lib $TMPDIR/opt/$DIRNAME/lib64
-		else
-			if [ ! "$__LIB" = "lib32" ]; then
-				ln -fs lib $TMPDIR/opt/$DIRNAME/lib32
-			fi
-		fi
 		mkdir -p $TMPDIR/usr/include
 		mv $TMPDIR/opt/$DIRNAME/include/turbojpeg.h $TMPDIR/usr/include
 		ln -fs /usr/include/turbojpeg.h $TMPDIR/opt/$DIRNAME/include/
